# CHANGELOG
# ---
# * Undefine unsupported methods from SecurePay [cody]
#
# * Enhance the TransFirst error message for declined transactions [cody]
#
# * Add initial support for TransFirst gateway [cody]
#
# * Deprecate certification_id in Payflow gateways [cody]
#
# * Work around required PayPal state fields for countries that don't require states [cody]
#
# * Add metadata to SecurePay gateway [cody]
#
# * Add initial support for the SecurePay gateway using the Authorize.net translator [cody]
#
# * Add the homepage_url and display_name accessors to each gateway [cody]
#
# * Remove Money dependency from main gateways. Cleanup tests.  Add supported_countries class accessor which returns an array of 2 digit iso country codes for which countries the gateway supports accounts in [cody]
#
# * Add American Express card to Psigate [cody]
#
# * Send N/A to PayPal in the PayPal Helper when we don't know the UK county [cody]
#
# * Actually pass the amount of the capture through to Payflow [cody]
#
# * Update ExactGateway test and test mode [cody]
#
# * Remove unused method in PslCardGateway [cody]
#
# * Add updated credit card tests [cody]
#
# * Update and test PslCardGateway [cody]
#
# * Add Laser card type [cody]
#
# * Update Nochex documentation [cody]
#
# * Sanitize the Realex order_id [cody] 
#
# * Add support for Irish Realex payment gateway [John Ward, cody]
#
# * Move credit_card helper method to the test_helper [cody]
#
# * Update PayflowExpressResponse to match the interface of the PayflowExpressResponse.  Add :no_shipping and :address_override options to PayflowExpress [cody]
#
# * Add a currency option to the Payflow and Paypal gateways [cody]
#
# * PaypalExpress should use the shipping address, not the billing address [cody]
#
# * Allow overriding the user with Payflow so that a vendor and user can be provided when making requests [cody]
#